--- a/app/src/main/res/layout/activity_kotlin.xml
+++ b/app/src/main/res/layout/activity_kotlin.xml
@@ -5,4 +5,10 @@
     android:layout_height="match_parent"
     tools:context="com.andrzc.dailyfa.KotlinActivity">
 
+    <TextView
+        android:id="@+id/tv_price"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/app_name" />
+
 </android.support.constraint.ConstraintLayout>
